# plugins-workspace

./: Cargo.toml  package-lock.json  package.json
.changes/: pre.json
examples/api/: package-lock.json  package.json
examples/api/src-tauri/: Cargo.toml  GoogleService-Info.plist  tauri.conf.json
examples/api/src-tauri/src/: lib.rs  main.rs
plugins/dialog/: CHANGELOG.md  Cargo.toml
plugins/notification/: Cargo.toml  build.rs
plugins/notification-macros/: Cargo.toml
plugins/notification-macros/src/: android.rs  lib.rs
plugins/notification-models/: Cargo.toml
plugins/notification-models/src/: lib.rs
plugins/notification/android/: build.gradle.kts  proguard-rules.pro
plugins/notification/android/src/main/: AndroidManifest.xml
plugins/notification/android/src/main/java/: Notification.kt  NotificationPlugin.kt  NotificationStorage.kt  PushNotificationsService.kt  TauriNotificationManager.kt
plugins/notification/ios/: Package.swift
plugins/notification/ios/Sources/: AppDelegate2.swift  NotificationHandler.swift  NotificationManager.swift  NotificationPlugin.swift
plugins/notification/src/: desktop.rs  error.rs  lib.rs  mobile.rs
plugins/notification/src/mobile/: android.rs
