[package]
name = "tauri-plugin-notification-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
tauri-plugin-notification-models = { path = "../notification-models" }
syn = "2"
quote = "1.0"
proc-macro2 = "1"
jni = "0.21"
libc = "0.2"
once_cell = "1"
